--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,8 @@
-@import "./reset";
+@import"./reset";
+@import "font-awesome-sprockets";
+@import "./font-awesome";
+@import"./side";
+@import"./main";
+
+
+
