--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,9 @@
 @import "./font-awesome";
 @import"./side";
 @import"./main";
+@import"./user";
+@import "config/colors";
+@import "modules/flash";
 
 
 
