--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,27 +2,24 @@
   .main__header
     .main__header__text
       .main__header__text__title
-        バナナ同好会
+        = @group.name
       .main__header__text__member
-        Member : 春日拓也
+        member : 
+        - @group.users.each do |user|
+          = user.name
     .main__header__edit
       = link_to edit_group_path(current_user) do
         edit
-      
-      
-  .main__content
-    .main__content__text
-      .main__content__text__name
-        春日拓也
-      .main__content__text__day
-        2019/11/05(Tue) 13:19:30
-    .main__content__comment
-      バナナは美味しいよ
-  .main__form
-    %input.main__form__input-box{:placeholder => "type a message", :value => ""}
-    %label.main__form__image
-      = icon 'far','image'
-      %input{type: "file", class: "file"}
-    .main__form__icon
-      Send
+
+  .messages
+    = render @messages
+
+  .form
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+      .form__mask
+        = f.label :image, class: 'form__mask__image' do
+          = icon('fas', 'image', class: 'icon')
+          = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
     
