--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -1,15 +1,13 @@
 .main {
-  float:right;
   width: calc(100% - 300px);
-  &__header{
-    position: fixed;
+  float: right;
+  &__header {
     height: 100px;
-    width: 1060px;
     border-bottom: solid 1px#eeeeee;
     display: flex;
     justify-content: space-between;
     padding: 0 40px;
-    z-index: 1;
+    box-sizing: border-box;
     &__text {
       &__title {
         padding-top: 35px;
@@ -20,16 +18,15 @@
         padding-top: 15px;
         font-size: 12px;
         color: #999999;
+        overflow: auto;
       }
     }
     &__edit {
-      color: #38aef0;
       line-height: 40px;
       height: 40px;
       padding: 0 20px;
       margin-top: 30px;
       border: solid 1px #38aef0;
-      right: 40px;
       cursor: pointer;
     }
   }
@@ -37,8 +34,8 @@
     background-color: #FAFAFA;
     box-sizing: border-box;
     padding: 46px 40px 0;
-    height: calc(100% - 100px - 90px);
-    margin-top: 100px;
+    height: calc(100vh - 100px - 90px);
+    overflow: scroll;
     .message {
       .upper-message {
         display: flex;
