--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -8,8 +8,8 @@
         - @group.users.each do |user|
           = user.name
     .main__header__edit
-      = link_to edit_group_path(current_user) do
-        edit
+      = link_to edit_group_path(@group) do
+        Edit
 
   .messages
     = render @messages
