--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -5,10 +5,10 @@
     %ul.side__header__icon
       %li.side__header__icon__1
         = link_to new_group_path do
-          = icon('fas', 'edit', class: 'link')
+          = fa_icon 'fas', 'edit', class: 'link'
       %li.side__header__icon__2
         = link_to edit_user_path(current_user) do
-          = icon('fas', 'cog', class: 'link')
+          = fa_icon 'fas', 'cog', class: 'link'
 
   .groups
     - current_user.groups.each do |group|
